[package]
name = "secure_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.17"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
